k8s/staging_oauth2_proxy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: swhurl-staging-oauth2-proxy
  name: swhurl-staging-oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: swhurl-staging-oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: swhurl-staging-oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=github
        - --email-domain=swhurl.com
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        # Register a new application
        # https://github.com/settings/applications/new
        image: docker.io/colemickens/oauth2_proxy:latest
        imagePullPolicy: Always
        name: swhurl-staging-oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: swhurl-staging-oauth2-proxy
  name: swhurl-staging-oauth2-proxy
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: swhurl-staging-oauth2-proxy

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: swhurl-staging-oauth2-proxy
spec:
  rules:
  - host: staging.swhurl.com
    http:
      paths:
      - backend:
          serviceName: swhurl-staging-oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - staging.swhurl.com
    secretName: staging-swhurl-com-tls
