k8s/swhurl-website-staging.yml
apiVersion: v1
kind: Service
metadata:
  name: swhurl-website-staging
  labels:
    app: swhurl-website-staging
    tier: frontend
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: swhurl-website-staging
    tier: frontend
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: swhurl-website-staging
spec:
  selector:
    matchLabels:
      app: swhurl-website-staging
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: swhurl-website-staging
        tier: frontend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
    spec:
      containers:
      - name: swhurl-website-staging
        image: swhurl/website:607ddcd0de0ddd64fa5ce1fd4ae0476d44b072e8
        resources:
          requests:
            cpu: 100m
            memory: 250Mi
        ports:
        - containerPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: swhurl-website-staging-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$request_uri"
spec:
  tls:
  - hosts:
    - staging.swhurl.com
    secretName: staging-swhurl-com-tls
  rules:
  - host: staging.swhurl.com
    http:
      paths:
      - path: /
        backend:
          serviceName: swhurl-website-staging
          servicePort: 80
