k8s/swhurl-website.yml
apiVersion: v1
kind: Service
metadata:
  name: swhurl-website
  labels:
    app: swhurl-website
    tier: frontend
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: swhurl-website
    tier: frontend
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: swhurl-website
spec:
  selector:
    matchLabels:
      app: swhurl-website
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: swhurl-website
        tier: frontend
    spec:
      containers:
      - name: swhurl-website
        image: swhurl/website:1.5.9
        resources:
          requests:
            cpu: 100m
            memory: 250Mi
        ports:
        - containerPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: swhurl-website-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - swhurl.com
    - www.swhurl.com
    secretName: swhurl-com-tls
  rules:
  - host: www.swhurl.com
    http:
      paths:
      - path: /
        backend:
          serviceName: swhurl-website
          servicePort: 80
  - host: swhurl.com
    http:
      paths:
      - path: /
        backend:
          serviceName: swhurl-website
          servicePort: 80
